--- a/src/http/views/partials/sortableHeader.hbs
+++ b/src/http/views/partials/sortableHeader.hbs
@@ -1,10 +1,12 @@
-<a href="{{sortLink}}" class="sort-btn">
-    {{sortText}}
-    <span class="sort-icon">
-        {{#if ascend}}
-        {{>uparrow}}
-        {{else}}
-        {{>downarrow}}
-        {{/if}}
-    </span>
-</a>
+<th class="table-header {{#each header.classes as |c|}} {{c}} {{/each}}">
+    <a href="{{header.href}}" class="sort-btn">
+        {{header.text}}
+        <span class="sort-icon">
+            {{#if header.ascend}}
+            {{>uparrow}}
+            {{else}}
+            {{>downarrow}}
+            {{/if}}
+        </span>
+    </a>
+</th>
