update sorting options and improve table header rendering across card and set views

--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -6,9 +6,7 @@
     <div class="w-full mx-auto">
         {{>filter}}
         <table class="table-container w-full">
-            <thead>
-                {{>tableHeadersRow}}
-            </thead>
+            <thead>{{>tableHeadersRow}}</thead>
             <tbody>
                 {{#each cards as |card|}}
                 <tr class="table-row">
