--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -1,9 +1,7 @@
 <div class="w-full mx-auto">
     {{>filter}}
     <table class="min-w-full bg-white">
-        <thead>
-            {{>tableHeadersRow}}
-        </thead>
+        <thead>{{>tableHeadersRow}}</thead>
         <tbody>
             {{#each setList}}
             <tr class="table-row">
