--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -14,48 +14,7 @@
 <div class="w-full mx-auto">
     {{>filter}}
     <table class="table-container">
-        <thead>
-            <tr class="table-header-row">
-                <th class="table-header pl-2">
-                    <a href="#" class="sort-btn">
-                        Owned
-                        <span class="sort-icon">{{>downarrow}}</span>
-                    </a>
-                </th>
-                <th class="table-header">
-                    <a href="#" class="sort-btn">
-                        Card No.
-                        <span class="sort-icon">{{>downarrow}}</span>
-                    </a>
-                </th>
-                <th class="table-header">
-                    <a href="#" class="sort-btn">
-                        Name
-                        <span class="sort-icon">{{>downarrow}}</span>
-                    </a>
-                </th>
-                <th class="table-header xs-hide">Mana Cost</th>
-                <th class="table-header xs-hide">Rarity</th>
-                <th class="table-header xs-hide">
-                    <a href="#" class="sort-btn">
-                        Price
-                        <span class="sort-icon">{{>downarrow}}</span>
-                    </a>
-                </th>
-                <th class="table-header xs-hide pr-2">
-                    <a href="#" class="sort-btn">
-                        Foil Price
-                        <span class="sort-icon">{{>downarrow}}</span>
-                    </a>
-                </th>
-                <th class="table-header xs-show pr-2">
-                    <a href="#" class="sort-btn">
-                        Prices
-                        <span class="sort-icon">{{>downarrow}}</span>
-                    </a>
-                </th>
-            </tr>
-        </thead>
+        <thead>{{>tableHeadersRow}}</thead>
         <tbody>
             {{#each set.cards}}
             <tr class="table-row">
