--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -2,6 +2,7 @@
     <section class="text-center bg-teal-100 mb-4">
         <h3 class="page-title">{{this.username}}'s Inventory</h3>
         <p>Value: {{#if this.ownedValue}}{{this.ownedValue}}{{else}}$0.00{{/if}}</p>
+        <p>Total Cards: {{#if this.ownedTotal}}{{this.ownedTotal}}{{else}}0{{/if}}</p>
     </section>
     <div class="w-full mx-auto">
         {{>filter}}
