--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -1,9 +1,12 @@
 <section class="border border-teal-100 sm:m-0 md:m-4">
     <section class="text-center bg-teal-100 mb-4">
         <h3 class="page-title">{{this.username}}'s Inventory</h3>
-        <p>Value: {{#if this.ownedValue}}{{this.ownedValue}}{{else}}$0.00{{/if}}</p>
-        <p>Total Cards: {{#if this.ownedTotal}}{{this.ownedTotal}}{{else}}0{{/if}}</p>
-        <p>Owned % - All Cards: {{#if this.completionRate}}{{this.completionRate}}{{else}}0{{/if}}%</p>
+        <p>Value: {{this.ownedValue}}</p>
+        <p>Total Cards: {{this.ownedTotal}}</p>
+        <p>All Cards: {{this.completionRate}}%</p>
+        <div class="completion-bar-container">
+            <div class="completion-bar" style="width: {{this.completionRate}}%;"></div>
+        </div>
     </section>
     <div class="w-full mx-auto">
         {{>filter}}
