--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -13,7 +13,7 @@
                 <td class="py-2">
                     <div class="relative w-full h-6 bg-gray-200 rounded">
                         <div class="absolute top-0 left-0 h-full bg-teal-500 rounded"
-                            style="width: {{this.ownedPercentage}}%;"></div>
+                            style="width: {{this.completionRate}}%;"></div>
                         <span class="absolute inset-0 flex items-center justify-center text-black font-bold">
                             ${{this.ownedValue}}
                         </span>
