--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -8,13 +8,12 @@
             <li class="text-gray-700">Block: {{set.block}}</li>
             <li class="text-gray-700">Code: {{toUpperCase set.code}}</li>
             <li class="text-gray-700">Release Date: {{set.releaseDate}}</li>
-            <li class="text-gray-700">Set Value: {{#if set.totalValue}}{{set.totalValue}}{{else}}$0.00{{/if}}</li>
-            <li class="text-gray-700">Owned Value: {{#if set.ownedValue}}{{set.ownedValue}}{{else}}$0.00{{/if}}</li>
-            <li class="text-gray-700">
-                <div class="completion-bar-container">
-                    <div class="completion-bar" style="width: {{this.completionRate}}%;">{{this.completionRate}}%</div>
-                </div>
-            </li>
+            <li class="text-gray-700">Set Price: {{set.totalValue}}</li>
+            {{#if authenticated}}
+            <li class="text-gray-700">Total Owned: {{set.ownedTotal}}/{{set.setSize}}</li>
+            <li class="text-gray-700">Owned Value: {{set.ownedValue}}</li>
+            <li class="text-gray-700">{{>completionRate set}}</li>
+            {{/if}}
         </ul>
     </section>
 </div>
