--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -10,15 +10,7 @@
                     <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 </td>
                 <td class="py-2">${{this.totalValue}}</td>
-                <td class="py-2">
-                    <div class="relative w-full h-6 bg-gray-200 rounded">
-                        <div class="absolute top-0 left-0 h-full bg-teal-500 rounded"
-                            style="width: {{this.completionRate}}%;"></div>
-                        <span class="absolute inset-0 flex items-center justify-center text-black font-bold">
-                            ${{this.ownedValue}}
-                        </span>
-                    </div>
-                </td>
+                <td class="py-2">{{>completionRate}}</td>
                 <td class="py-2 pr-2 xs-hide">{{this.releaseDate}}</td>
             </tr>
             {{/each}}
