--- a/src/http/public/css/app.css
+++ b/src/http/public/css/app.css
@@ -25,6 +25,36 @@ input[type="number"] {
   background-color: rgb(173 216 230);
 }
 
+.completion-bar-container {
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  width: 100%;
+  background: #e0e0e0;
+  border-radius: 4px;
+  height: 18px;
+  margin-bottom: 1em;
+  overflow: hidden;
+}
+
+.completion-bar {
+  position: absolute;
+  top: 0;
+  left: 0;
+  height: 100%;
+  background: #14b8a6;
+  transition: width 0.4s;
+  z-index: 1;
+}
+
+.completion-bar-container span {
+  z-index: 10;
+  width: 100%;
+  text-align: center;
+  position: relative;
+}
+
 @media (max-width: 450px) {
 
   table,
