--- a/src/http/views/inventory.hbs
+++ b/src/http/views/inventory.hbs
@@ -1,7 +1,10 @@
 <section class="border border-teal-100 sm:m-0 md:m-4">
     <section class="text-center bg-teal-100 mb-4">
         <h3 class="page-title">{{this.username}}'s Inventory</h3>
-        <p>Value: ${{#if this.ownedValue}}{{this.ownedValue}}{{else}}0.00{{/if}}</p>
+        <p>Value: {{this.ownedValue}}</p>
+        <p>Total Cards: {{this.ownedTotal}}</p>
+        <p>All Cards: {{this.completionRate}}%</p>
+        {{>completionRate}}
     </section>
     <div class="w-full mx-auto">
         {{>filter}}
