--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -4,10 +4,16 @@
             <i class="ss ss-{{set.keyruneCode}} ss-2x"></i>
             <span>{{set.name}}</span>
         </h3>
-        <ul clas="mt-4 space-y-2 text-left">
+        <ul class="mt-4 space-y-2 text-left">
             <li class="text-gray-700">Block: {{set.block}}</li>
-            <li class="text-gray-700">Code: {{set.code}}</li>
+            <li class="text-gray-700">Code: {{toUpperCase set.code}}</li>
             <li class="text-gray-700">Release Date: {{set.releaseDate}}</li>
+            <li class="text-gray-700">Set Price: {{set.totalValue}}</li>
+            {{#if authenticated}}
+            <li class="text-gray-700">Total Owned: {{set.ownedTotal}}/{{set.setSize}}</li>
+            <li class="text-gray-700">Owned Value: {{set.ownedValue}}</li>
+            <li class="text-gray-700">{{>completionRate set}}</li>
+            {{/if}}
         </ul>
     </section>
 </div>
