--- a/src/http/views/card.hbs
+++ b/src/http/views/card.hbs
@@ -1,3 +1,4 @@
+<link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.css" rel="stylesheet" type="text/css" />
 <div class="w-full mx-auto">
     <section class="card-info flex flex-col md:flex-row section-container">
 
