--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -1,4 +1,4 @@
-<link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.css" rel="stylesheet" type="text/css" />
+<link href="//cdn.jsdelivr.net/npm/mana-font@latest/css/mana.min.css" rel="stylesheet" type="text/css" />
 <div>
     <section class="text-center bg-teal-100 mb-4">
         <h3 class="page-title flex items-center justify-center space-x-2">
