--- a/src/http/views/set.hbs
+++ b/src/http/views/set.hbs
@@ -9,6 +9,13 @@
             <li class="text-gray-700">Block: {{set.block}}</li>
             <li class="text-gray-700">Code: {{toUpperCase set.code}}</li>
             <li class="text-gray-700">Release Date: {{set.releaseDate}}</li>
+            {{!-- TODO: Use Base/Main Set Price for Normal as default --}}
+            {{!-- TODO: Add Button to show pop-up with all Set Price info:
+            Base-Normal,
+            Base-All,
+            All-Normal,
+            All-All
+            --}}
             <li class="text-gray-700">Set Price: {{set.totalValue}}</li>
             {{#if authenticated}}
             <li class="text-gray-700">Total Owned: {{set.ownedTotal}}/{{set.setSize}}</li>
