update ntoes in main hbs for toggle

--- a/src/http/views/layouts/main.hbs
+++ b/src/http/views/layouts/main.hbs
@@ -15,6 +15,7 @@
     <header>
         {{>navbar}}
         {{>breadcrumbs}}
+        {{!-- TODO: toggle main/base sets +include bonus sets (or add tabs??) --}}
     </header>
     <main class="text-sm sm:text-base md:text-lg lg:test-xl">
         {{{body}}}
