set price info values back to front

--- a/src/http/views/partials/setList.hbs
+++ b/src/http/views/partials/setList.hbs
@@ -9,7 +9,7 @@
                     <i class="ss ss-{{this.keyruneCode}} ss-fw"></i>
                     <a href="{{this.url}}" class="table-link">{{this.name}}</a>
                 </td>
-                <td class="py-2">{{this.totalValue}}</td>
+                <td class="py-2">{{this.prices.basePriceNormal}}</td>
                 <td class="py-2">{{>completionRate}}</td>
                 <td class="py-2 pr-2 xs-hide">{{this.releaseDate}}</td>
             </tr>
